--- a/credito/templates/credito/edit_compra.html
+++ b/credito/templates/credito/edit_compra.html
@@ -58,7 +58,7 @@
          </div>
       <div class="mb-3 d-flex justify-content-end">
         <button type="submit" class="btn btn-primary"><ion-icon name="document-text-outline"></ion-icon> Salvar</button>
-        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal"><ion-icon name="trash-outline"></ion-icon> Excluir</button>
+        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal"><ion-icon name="trash-outline"></ion-icon> Excluir</button>
         <a class="btn btn-warning" href="{% url 'fatura' %}" role="button"><ion-icon name="card-outline"></ion-icon> Fatura</a>
     </div>
 
@@ -80,7 +80,6 @@
     </div>
   </div>
 </div>
-
 
     </form>
 </div>
